--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
       font-weight: 800;
       font-size: 14px;
       transition: transform .15s ease, box-shadow .2s ease;
+      cursor: pointer;
     }
 
     .btn:hover {
@@ -258,6 +259,27 @@
       background: linear-gradient(135deg, var(--accent), var(--accent3));
       border: none;
       color: white;
+    }
+
+    .btn:disabled {
+      opacity: 0.7;
+      cursor: not-allowed;
+      transform: none;
+    }
+
+    /* Spinner */
+    .spinner {
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      border: 2px solid rgba(255, 255, 255, 0.4);
+      border-top-color: rgba(255, 255, 255, 1);
+      animation: spin 0.8s linear infinite;
+      display: none;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
     }
 
     /* Profile image */
@@ -475,15 +497,26 @@
       box-shadow: 0 0 0 4px rgba(56, 189, 248, 0.15);
     }
 
-    .success {
+    .toast {
       display: none;
       padding: 12px;
       border-radius: 14px;
-      border: 1px solid rgba(34, 197, 94, 0.4);
-      background: rgba(34, 197, 94, 0.12);
-      color: var(--text);
       font-size: 14px;
       font-weight: 700;
+      margin-bottom: 12px;
+      border: 1px solid transparent;
+    }
+
+    .toast.success {
+      display: none;
+      border-color: rgba(34, 197, 94, 0.4);
+      background: rgba(34, 197, 94, 0.12);
+    }
+
+    .toast.error {
+      display: none;
+      border-color: rgba(239, 68, 68, 0.45);
+      background: rgba(239, 68, 68, 0.12);
     }
 
     .footer {
@@ -524,6 +557,7 @@
 
       <div class="nav">
         <a class="pill" href="#skills">Skills</a>
+        <a class="pill" href="#platforms">Platforms</a>
         <a class="pill" href="#projects">Projects</a>
         <a class="pill" href="#experience">Experience</a>
         <a class="pill" href="#education">Education</a>
@@ -622,12 +656,8 @@
       <div class="section-title">Coding Platforms</div>
       <div class="card">
         <div class="cta">
-          <a class="btn" href="https://leetcode.com/u/ramgadek95/" target="_blank" rel="noopener">
-            🧠 LeetCode
-          </a>
-          <a class="btn" href="https://www.hackerrank.com/profile/ramgadek95" target="_blank" rel="noopener">
-            🛠️ HackerRank
-          </a>
+          <a class="btn" href="https://leetcode.com/u/ramgadek95/" target="_blank" rel="noopener">🧠 LeetCode</a>
+          <a class="btn" href="https://www.hackerrank.com/profile/ramgadek95" target="_blank" rel="noopener">🛠️ HackerRank</a>
         </div>
         <p style="margin-top:8px; color:var(--muted); font-size:14px;">
           Explore my problem-solving and competitive coding profiles.
@@ -640,29 +670,55 @@
       <div class="section-title">Projects</div>
 
       <div class="grid">
+
         <div class="card project">
-          <h3 style="margin-bottom:6px;">📱 Android Apps (100K+ Users)</h3>
+          <h3 style="margin-bottom:6px;">📌 Meeting Box (Android App)</h3>
           <p style="color:var(--muted); font-size:14px; margin-bottom:10px;">
-            Built scalable Android apps using Jetpack Compose + MVVM/Clean Architecture, REST APIs, Room, and Firebase.
+            Meeting management Android application built with Kotlin, MVVM/Clean Architecture and real-time sync.
           </p>
           <ul>
-            <li>Improved load time by ~30% through optimization</li>
-            <li>Reduced crash rate by ~40% using Crashlytics monitoring + fixes</li>
-            <li>Delivered stable releases with CI/CD and structured testing</li>
+            <li>Production-ready app with structured architecture</li>
+            <li>Real-time synchronization and stable performance</li>
+            <li>Published on Google Play Store with active users</li>
           </ul>
         </div>
 
         <div class="card project">
-          <h3 style="margin-bottom:6px;">📺 OTT Streaming (Android / TV / Fire TV)</h3>
+          <h3 style="margin-bottom:6px;">❤️ Beloved by Kaefer (Android SDK App)</h3>
           <p style="color:var(--muted); font-size:14px; margin-bottom:10px;">
-            Developed streaming features using ExoPlayer/Media3 with HLS/DASH playback optimization.
+            Android application developed using modern SDK features, best practices and clean UI implementation.
           </p>
           <ul>
-            <li>Adaptive bitrate streaming + buffering improvements</li>
-            <li>TV D-pad navigation with TV optimized UI/UX</li>
-            <li>Improved playback stability and performance</li>
+            <li>Built using Kotlin + modern Android components</li>
+            <li>Optimized UI performance and app stability</li>
+            <li>Follows scalable coding practices</li>
           </ul>
         </div>
+
+        <div class="card project">
+          <h3 style="margin-bottom:6px;">🌍 Spaarks - Local Social Network</h3>
+          <p style="color:var(--muted); font-size:14px; margin-bottom:10px;">
+            Location-based social networking app to connect nearby communities and discover local events.
+          </p>
+          <ul>
+            <li>Location-based features + local engagement</li>
+            <li>Community connect + event discovery modules</li>
+            <li>Published on Google Play Store</li>
+          </ul>
+        </div>
+
+        <div class="card project">
+          <h3 style="margin-bottom:6px;">📺 OTT Platforms (Timesplay / Watcho / SunNXT)</h3>
+          <p style="color:var(--muted); font-size:14px; margin-bottom:10px;">
+            Worked on OTT streaming apps with ExoPlayer/Media3, HLS/DASH playback, analytics and performance improvements.
+          </p>
+          <ul>
+            <li>Adaptive bitrate streaming + buffer optimization</li>
+            <li>DRM (Widevine), audio switching, playback stability</li>
+            <li>Firebase + AppsFlyer + CleverTap integrations</li>
+          </ul>
+        </div>
+
       </div>
     </div>
 
@@ -736,14 +792,20 @@
           Want to hire me or collaborate? Send a message 👇
         </p>
 
-        <div class="success" id="successMsg">✅ Thank you! Your message has been submitted successfully.</div>
+        <!-- Toast Messages -->
+        <div class="toast success" id="successMsg">✅ Thank you! Your message has been sent successfully.</div>
+        <div class="toast error" id="errorMsg">❌ Message failed. Please try again later.</div>
 
         <form id="contactFormId">
-          <input type="text" id="name" placeholder="Your Name" required />
-          <input type="email" id="email" placeholder="Your Email" required />
-          <input type="text" id="subject" placeholder="Subject" required />
-          <textarea id="message" placeholder="Your Message" required></textarea>
-          <button class="btn primary" type="submit">🚀 Submit Message</button>
+          <input type="text" id="name" name="from_name" placeholder="Your Name" required />
+          <input type="email" id="email" name="reply_to" placeholder="Your Email" required />
+          <input type="text" id="subject" name="subject" placeholder="Subject" required />
+          <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+
+          <button class="btn primary" id="sendBtn" type="submit">
+            <span class="spinner" id="spinner"></span>
+            <span id="btnText">🚀 Send Message</span>
+          </button>
         </form>
       </div>
     </div>
@@ -754,6 +816,9 @@
     </div>
 
   </div>
+
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
   <script>
     // Year
@@ -789,20 +854,76 @@
 
     bars.forEach(b => barObserver.observe(b));
 
-    // Contact form submission (frontend demo)
+    // ===========================
+    // EmailJS Contact Form + Auto Reply
+    // ===========================
     const form = document.getElementById("contactFormId");
-    const successMsg = document.getElementById("successMsg");
 
-    form.addEventListener("submit", (e) => {
+    const successMsg = document.getElementById("successMsg");
+    const errorMsg = document.getElementById("errorMsg");
+
+    const sendBtn = document.getElementById("sendBtn");
+    const spinner = document.getElementById("spinner");
+    const btnText = document.getElementById("btnText");
+
+    // Your EmailJS Keys
+    const EMAILJS_PUBLIC_KEY = "JD2xflENhhyGe-dGB";
+    const EMAILJS_SERVICE_ID = "service_9atb2pe";
+    const EMAILJS_TEMPLATE_ID = "template_1zkonql";
+
+    // 🔥 Create Auto Reply template and paste its ID here
+    const EMAILJS_AUTOREPLY_TEMPLATE_ID = "PASTE_AUTO_REPLY_TEMPLATE_ID";
+
+    emailjs.init(EMAILJS_PUBLIC_KEY);
+
+    function showToast(type) {
+      successMsg.style.display = "none";
+      errorMsg.style.display = "none";
+
+      if (type === "success") {
+        successMsg.style.display = "block";
+        setTimeout(() => successMsg.style.display = "none", 5000);
+      } else {
+        errorMsg.style.display = "block";
+        setTimeout(() => errorMsg.style.display = "none", 5000);
+      }
+    }
+
+    function setLoading(isLoading) {
+      if (isLoading) {
+        sendBtn.disabled = true;
+        spinner.style.display = "inline-block";
+        btnText.textContent = "Sending...";
+      } else {
+        sendBtn.disabled = false;
+        spinner.style.display = "none";
+        btnText.textContent = "🚀 Send Message";
+      }
+    }
+
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
-      // Here you can connect backend later (EmailJS / Google Form / Firebase)
-      successMsg.style.display = "block";
-      form.reset();
+      setLoading(true);
 
-      setTimeout(() => {
-        successMsg.style.display = "none";
-      }, 4000);
+      try {
+        // 1) Send email to YOU
+        await emailjs.sendForm(EMAILJS_SERVICE_ID, EMAILJS_TEMPLATE_ID, form);
+
+        // 2) Send Auto-reply to USER (optional)
+        if (EMAILJS_AUTOREPLY_TEMPLATE_ID && EMAILJS_AUTOREPLY_TEMPLATE_ID !== "template_gwr5oxd") {
+          await emailjs.sendForm(EMAILJS_SERVICE_ID, EMAILJS_AUTOREPLY_TEMPLATE_ID, form);
+        }
+
+        showToast("success");
+        form.reset();
+
+      } catch (err) {
+        console.log("EmailJS Error:", err);
+        showToast("error");
+      }
+
+      setLoading(false);
     });
   </script>
 </body>
