Update EmailJS auto-reply template ID

--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
     const EMAILJS_TEMPLATE_ID = "template_1zkonql";
 
     // 🔥 Create Auto Reply template and paste its ID here
-    const EMAILJS_AUTOREPLY_TEMPLATE_ID = "PASTE_AUTO_REPLY_TEMPLATE_ID";
+    const EMAILJS_AUTOREPLY_TEMPLATE_ID = "template_gwr5oxd";
 
     emailjs.init(EMAILJS_PUBLIC_KEY);
 
